Несколько правок для читаемости

--- a/ML_homework_1.ipynb
+++ b/ML_homework_1.ipynb
@@ -43,27 +43,27 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "1a0840e9-8f02-4efc-980f-516ca2fa862a"
+        "outputId": "f6bbb683-3fc2-443e-cca9-190ed1781fe3"
       },
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/Yorko/mlcourse_open/master/data/adult.data.csv -P drive/Open_course_ML"
       ],
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2018-07-04 15:33:23--  https://raw.githubusercontent.com/Yorko/mlcourse_open/master/data/adult.data.csv\r\n",
+            "--2018-07-07 16:43:33--  https://raw.githubusercontent.com/Yorko/mlcourse_open/master/data/adult.data.csv\r\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\r\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3518607 (3.4M) [text/plain]\n",
             "Saving to: ‘drive/Open_course_ML/adult.data.csv’\n",
             "\n",
-            "adult.data.csv      100%[===================>]   3.36M  11.2MB/s    in 0.3s    \n",
+            "adult.data.csv      100%[===================>]   3.36M  14.4MB/s    in 0.2s    \n",
             "\n",
-            "2018-07-04 15:33:24 (11.2 MB/s) - ‘drive/Open_course_ML/adult.data.csv’ saved [3518607/3518607]\n",
+            "2018-07-07 16:43:33 (14.4 MB/s) - ‘drive/Open_course_ML/adult.data.csv’ saved [3518607/3518607]\n",
             "\n"
           ],
           "name": "stdout"
@@ -78,7 +78,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 702
         },
-        "outputId": "cdd9a526-2295-476d-98c7-83eb04e77003"
+        "outputId": "3fc8a1d7-8b2c-46ff-fbb4-19a3a1661229"
       },
       "cell_type": "code",
       "source": [
@@ -86,7 +86,7 @@
         "data = pd.read_csv('drive/Open_course_ML/adult.data.csv')\n",
         "data.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 2
         }
       ]
     },
@@ -375,13 +375,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f12e1923-e943-4798-ffd0-7db0aad8578d"
+        "outputId": "891dcbd3-7fb2-4e78-edd9-d12594f05e3f"
       },
       "cell_type": "code",
       "source": [
         "data['sex'].value_counts()['Female']"
       ],
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 3
         }
       ]
     },
@@ -415,13 +415,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9bc10814-d679-427b-9c00-e1539d65c7b0"
+        "outputId": "660b8000-3ddb-4aea-ed73-a3e2bf3ffae5"
       },
       "cell_type": "code",
       "source": [
         "data[data['sex'] == 'Female']['age'].mean()"
       ],
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 4
         }
       ]
     },
@@ -455,13 +455,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fba2ae60-8706-48e7-ed66-963b1a58ec6f"
+        "outputId": "f8335143-6965-4b17-cccc-ad12bc3c98f2"
       },
       "cell_type": "code",
       "source": [
         "(data['native-country'].value_counts()['Germany'] * 100) / data.shape[0]"
       ],
-      "execution_count": 101,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 5
         }
       ]
     },
@@ -495,7 +495,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "3a7bbfdb-8a13-49a1-c4ef-1c6d1c8e7c01"
+        "outputId": "1c9c89f0-a0f6-4468-b968-40137998bf36"
       },
       "cell_type": "code",
       "source": [
@@ -507,7 +507,7 @@
         "print('Среднее значение возраста: '+ str(data[data['salary'] == '<=50K']['age'].mean()) )\n",
         "print('Среднеквадратическое отклонение (Стандартное отклонение): ' + str(data[data['salary'] == '<=50K']['age'].std()) )"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,21 +542,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "82020ba8-4b3d-4373-d61f-8c0b2d526608"
+        "outputId": "6d7e8dca-0b74-42d9-c3d6-9fd1f4633c0a"
       },
       "cell_type": "code",
       "source": [
         "# hight_education_list = ['Bachelors', 'Prof-school', 'Assoc-acdm', 'Assoc-voc', 'Masters', 'Doctorate']\n",
         "# data[data['salary'] == '>50K' and data['education'] not in hight_education_list].bool()\n",
         "\n",
-        "print('Statement that all people that have a salary >50k have hight degree is ' + str(data[(data['salary'] == '>50K') & ((data['education'] != 'Bachelors') | (data['education'] != 'Prof-school') | (data['education'] != 'Assoc-acdm') | (data['education'] != 'Assoc-voc') | (data['education'] != 'Masters') | (data['education'] != 'Doctorate') )].shape[0] == 0))"
+        "print('Утверждение ' + str(data[(data['salary'] == '>50K') & ((data['education'] != 'Bachelors') | (data['education'] != 'Prof-school') | (data['education'] != 'Assoc-acdm') | (data['education'] != 'Assoc-voc') | (data['education'] != 'Masters') | (data['education'] != 'Doctorate') )].shape[0] == 0))"
       ],
-      "execution_count": 72,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Statement that all people that have a salary >50k have hight degree is False\n"
+            "Утверждение False\n"
           ],
           "name": "stdout"
         }
@@ -580,13 +580,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 235
         },
-        "outputId": "2cdc93ec-1132-48cc-ee99-da8467f09dcd"
+        "outputId": "60058f98-0880-4cff-8b15-fb7babd03aae"
       },
       "cell_type": "code",
       "source": [
         "data.groupby(['race'])['age'].describe()"
       ],
-      "execution_count": 50,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 8
         }
       ]
     },
@@ -734,23 +734,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1a9d13d8-1a77-48f3-ff22-0ab771e158a1"
+        "outputId": "705fdf26-ac2a-4862-9acd-49bdc01f4679"
       },
       "cell_type": "code",
       "source": [
         "count_married = data[(data['salary'] == '>50K') & (data['sex'] != 'Female')  & ((data['marital-status'] == 'Married-civ-spouse') | (data['marital-status'] == 'Married-spouse-absent') | (data['marital-status'] == 'Married-AF-spouse'))].shape[0]\n",
         "count_not_married = data[(data['salary'] == '>50K') & (data['sex'] != 'Female')  & ((data['marital-status'] != 'Married-civ-spouse') | (data['marital-status'] != 'Married-spouse-absent') | (data['marital-status'] != 'Married-AF-spouse'))].shape[0]\n",
         "if count_married - count_not_married:\n",
-        "  print('Married male')\n",
+        "  print('Женатых мужчин больше')\n",
         "else:\n",
-        "  print('not married male')"
+        "  print('Не женатых мужчин больше')"
       ],
-      "execution_count": 96,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Married male\n"
+            "Женатых мужчин больше\n"
           ],
           "name": "stdout"
         }
@@ -774,24 +774,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "9da590bc-d72b-4b89-b778-0c7d1a1e702f"
+        "outputId": "e88e2b11-79e1-4985-8834-717dd134370e"
       },
       "cell_type": "code",
       "source": [
-        "print('Max hours per week: ' + str(data['hours-per-week'].max()) )\n",
+        "print('Максимальная выработка в неделю: ' + str(data['hours-per-week'].max()) )\n",
         "count_people_that_work_max_hours = data[ data['hours-per-week'] == data['hours-per-week'].max()].shape[0]\n",
-        "print('Count of people that working max hours: ' + str(count_people_that_work_max_hours))\n",
+        "print('Людей, которые работают по-максимуму: ' + str(count_people_that_work_max_hours))\n",
         "\n",
-        "print('Persent people that have salary >50K and work max time: ' + str( (data[(data['hours-per-week'] == data['hours-per-week'].max()) & (data['salary'] == '>50K')].shape[0]) / data[ data['hours-per-week'] == data['hours-per-week'].max()].shape[0]))"
+        "print('Людей, которые зарабатывают >50к и работающих максимум времени: ' + str( (data[(data['hours-per-week'] == data['hours-per-week'].max()) & (data['salary'] == '>50K')].shape[0]) / data[ data['hours-per-week'] == data['hours-per-week'].max()].shape[0]))"
       ],
-      "execution_count": 97,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Max hours per week: 99\n",
-            "Count of people that working max hours: 85\n",
-            "Persent people that have salary >50K and work max time: 0.29411764705882354\n"
+            "Максимальная выработка в неделю: 99\n",
+            "Людей, которые работают по-максимуму: 85\n",
+            "Людей, которые зарабатывают >50к и работающих максимум времени: 0.29411764705882354\n"
           ],
           "name": "stdout"
         }
@@ -815,13 +815,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 1382
         },
-        "outputId": "e36e4929-acbd-4146-d468-c550962c1a9b"
+        "outputId": "aef7c969-878c-4cfb-a454-841d87d7207f"
       },
       "cell_type": "code",
       "source": [
         "data[data['salary'] == '<=50K'].groupby(['native-country'])['hours-per-week'].describe()"
       ],
-      "execution_count": 107,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,7 +1428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 11
         }
       ]
     },
@@ -1440,13 +1440,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 1320
         },
-        "outputId": "c4fce54d-6f6f-471d-fe86-5a6837c2e481"
+        "outputId": "065b6794-2324-460b-89ef-a075a331207e"
       },
       "cell_type": "code",
       "source": [
         "data[data['salary'] == '>50K'].groupby(['native-country'])['hours-per-week'].describe()"
       ],
-      "execution_count": 104,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2027,7 +2027,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 12
         }
       ]
     },
