Исправлены недочеты, добавлено решение дополнительных заданий

--- a/ML_homework_3.ipynb
+++ b/ML_homework_3.ipynb
@@ -3829,6 +3829,51 @@
     },
     {
       "metadata": {
+        "id": "Trh7KHlmdAoF",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Построим с наилучшими параметрами дерево и посмотрим его точность."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "k2aNbdCUdAQH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "aefa9570-c72b-4458-ff87-e86c5c717b22"
+      },
+      "cell_type": "code",
+      "source": [
+        "rf = RandomForestClassifier(n_estimators=100, n_jobs=-1, random_state=17,max_depth = 14, max_features = 55)\n",
+        "\n",
+        "rf.fit(X_train, y_train)\n",
+        "\n",
+        "forest_predictions = rf.predict(X_test)\n",
+        "accuracy_score(y_test, forest_predictions)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8654873779251888"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "jK6jCqsuyeX5",
         "colab_type": "text"
       },
